# neural_network

./: .gitignore  0nn.cpp  0nn_result.cpp  CMakeLists.txt  RoadMap.txt  makeTrainingSamples.cpp  out.txt
